# odroid_camera

./: README.md
mytest_client/: CMakeLists.txt  main.cpp
odroid_code_server/: CMakeLists.txt  main.cpp
