cmake_minimum_required(VERSION 2.8.12)
project(test)
add_executable(test main.cpp) 

find_package(OpenCV REQUIRED)
if(OpenCV_FOUND)
include_directories(${OpenCV_INCLUDE_DIRS})
target_link_libraries(test ${OpenCV_LIBRARIES})
else(OpenCV_FOUND)
message(FATAL ERROR "Librarie OpenCV introuvable!")
endif(OpenCV_FOUND)